Fixed error in R generation due to mislabeled image

--- a/gamma/res/layout-land/splash_promo.xml
+++ b/gamma/res/layout-land/splash_promo.xml
@@ -19,6 +19,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/promo2" />
+        android:background="@drawable/promo_logo" />
 
 </RelativeLayout>
