--- a/gamma/res/layout-land/menu_promo.xml
+++ b/gamma/res/layout-land/menu_promo.xml
@@ -10,6 +10,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/promo2" />
+        android:background="@drawable/lackmann_splash1" />
 
 </RelativeLayout>
